force-app/main/default/objects/Contact/fields/CurrMonthTHBadges__c.field-meta.xml
<CustomField>
    <fullName>CurrMonthTHBadges__c</fullName>
    <label>Current Month Trail Head Badges</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>