force-app/main/default/objects/Contact/fields/CurrMonthTHPoints__c.field-meta.xml
<CustomField>
    <fullName>CurrMonthTHPoints__c</fullName>
    <label>Current Month Trail Head Points</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>