force-app/main/default/objects/Contact/fields/CurrWeekTHBadges__c.field-meta.xml
<CustomField>
    <fullName>CurrWeekTHBadges__c</fullName>
    <label>Current Week Trail Head Badges</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>