force-app/main/default/objects/Contact/fields/CurrWeekTHPoints__c.field-meta.xml
<CustomField>
    <fullName>CurrWeekTHPoints__c</fullName>
    <label>Current Week Trail Head Points</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>