force-app/main/default/objects/Contact/fields/LengthContact__c.field-meta.xml
<CustomField>
    <fullName>LengthContact__c</fullName>
    <formula>LEN( LastName +  FirstName  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LengthContact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>