force-app/main/default/objects/Contact/fields/MonthlyBadgeDiff__c.field-meta.xml
<CustomField>
    <fullName>MonthlyBadgeDiff__c</fullName>
    <formula>CurrMonthTHBadges__c -  PrevMonthTHBadges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Badge Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>