force-app/main/default/objects/Contact/fields/MonthlyPointDiff__c.field-meta.xml
<CustomField>
    <fullName>MonthlyPointDiff__c</fullName>
    <formula>CurrMonthTHPoints__c -  PrevMonthTHPoints__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Point Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>