force-app/main/default/objects/Contact/fields/PrevMonthTHBadges__c.field-meta.xml
<CustomField>
    <fullName>PrevMonthTHBadges__c</fullName>
    <label>Previous Month TrailHead Badges</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>