force-app/main/default/objects/Contact/fields/PrevMonthTHPoints__c.field-meta.xml
<CustomField>
    <fullName>PrevMonthTHPoints__c</fullName>
    <label>Previous Month TrailHead Points</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>