force-app/main/default/objects/Contact/fields/PrevWeekTHBadges__c.field-meta.xml
<CustomField>
    <fullName>PrevWeekTHBadges__c</fullName>
    <label>Previous Week TrailHead Badges</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>