force-app/main/default/objects/Contact/fields/PrevWeekTHPoints__c.field-meta.xml
<CustomField>
    <fullName>PrevWeekTHPoints__c</fullName>
    <label>Previous Week TrailHead Points</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>