force-app/main/default/objects/Contact/fields/ProfileStatus__c.field-meta.xml
<CustomField>
    <fullName>ProfileStatus__c</fullName>
    <description>Proile URL Status</description>
    <label>Profile Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Profile</fullName>
            </value>
            <value>
                <fullName>Private Profile</fullName>
            </value>
            <value>
                <fullName>Bad Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>