force-app/main/default/objects/Contact/fields/TotalTHBadges__c.field-meta.xml
<CustomField>
    <fullName>TotalTHBadges__c</fullName>
    <label>Total Trail Head Badges</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>