force-app/main/default/objects/Contact/fields/TotalTHPoints__c.field-meta.xml
<CustomField>
    <fullName>TotalTHPoints__c</fullName>
    <label>Total Trail Head Points</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>