force-app/main/default/objects/Contact/fields/TrailHeadId__c.field-meta.xml
<CustomField>
    <fullName>TrailHeadId__c</fullName>
    <description>The trail head Id of the contact</description>
    <label>Trail Head Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>