force-app/main/default/objects/Contact/fields/WeeklyBadgeDiff__c.field-meta.xml
<CustomField>
    <fullName>WeeklyBadgeDiff__c</fullName>
    <formula>CurrWeekTHBadges__c -  PrevWeekTHBadges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekly Badge Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>