force-app/main/default/objects/Contact/fields/WeeklyPointDiff__c.field-meta.xml
<CustomField>
    <fullName>WeeklyPointDiff__c</fullName>
    <formula>CurrWeekTHPoints__c -  PrevWeekTHPoints__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekly Point Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>